fleshed out dynamics

--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Desktop/16745/recitations-2024/16745proj/Project.toml`\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "deriv_conj (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Pkg;\n",
     "# Pkg.resolve()\n",
@@ -31,10 +14,10 @@
     "import CoordinateTransformations\n",
     "import MeshCat as mc\n",
     "import MathOptInterface as MOI\n",
-    "import Ipopt \n",
+    "import Ipopt\n",
     "import FiniteDiff\n",
     "import ForwardDiff as FD\n",
-    "import Convex as cvx \n",
+    "import Convex as cvx\n",
     "import ECOS\n",
     "using LinearAlgebra\n",
     "using Plots\n",
@@ -43,25 +26,15 @@
     "using Test\n",
     "using StaticArrays\n",
     "using Printf\n",
-    "const Quat=QuatRotation\n",
+    "const Quat = QuatRotation\n",
     "include(\"utils/quaternions.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "initialise_ball (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getting rotation matrix from axis-angle vectors\n",
     "function skew(v)\n",
@@ -118,7 +91,7 @@
     "    N_Q_B = [nx ny nz]\n",
     "end\n",
     "\n",
-    "function initialise_quads(N,rope_length,mc,vis)\n",
+    "function initialise_quads(N, rope_length, mc, vis)\n",
     "    quad_obj = mc.MeshFileGeometry(joinpath(@__DIR__, \"quadrotor.obj\"))\n",
     "    quad_material = mc.MeshPhongMaterial(color=mc.RGBA(1.0, 0.6, 0.6, 0.7))\n",
     "    quad_r_offset = [0, 0, 0]\n",
@@ -128,7 +101,7 @@
     "        mc.Translation(quad_r_offset),\n",
     "        mc.LinearMap(quad_scale * quad_Q_offset)\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    quad_rotor_position = []\n",
     "    for i = 1:N\n",
     "        quad_offset = mc.compose(\n",
@@ -139,26 +112,26 @@
     "        mc.setobject!(vis[Symbol(\"quad\", i)][:base], quad_obj, quad_material)\n",
     "        mc.settransform!(vis[Symbol(\"quad\", i)][:base], quad_offset)\n",
     "\n",
-    "        cyl, material = create_rope(vis, rope_length, 0.05, [3 * cos(i * 2 * pi / N), 3 * sin(i * 2pi / N), 1], [0.0,0.0,0.0])\n",
+    "        cyl, material = create_rope(vis, rope_length, 0.05, [3 * cos(i * 2 * pi / N), 3 * sin(i * 2pi / N), 1], [0.0, 0.0, 0.0])\n",
     "        mc.setobject!(vis[Symbol(\"rope\", i)], cyl, material)\n",
     "    end\n",
-    "end \n",
+    "end\n",
     "\n",
-    "function initialise_ball(mc,vis)\n",
+    "function initialise_ball(mc, vis)\n",
     "    # dragon details (play with these to see how they change)\n",
-    "dragon_obj = mc.HyperSphere(mc.Point(0.0, 0.0, 0.0), 0.5)\n",
-    "dragon_material = mc.MeshPhongMaterial(color=mc.RGBA(0.6, 0.6, 1.0, 0.7))\n",
-    "dragon_r_offset = [0, 0, 0]\n",
-    "dragon_Q_offset = dcm_from_phi(pi / 2 * [1, 0, 0])\n",
-    "dragon_offset = mc.compose(\n",
-    "    mc.Translation(dragon_r_offset),\n",
-    "    mc.LinearMap(dragon_Q_offset)\n",
-    ")\n",
+    "    dragon_obj = mc.HyperSphere(mc.Point(0.0, 0.0, 0.0), 0.5)\n",
+    "    dragon_material = mc.MeshPhongMaterial(color=mc.RGBA(0.6, 0.6, 1.0, 0.7))\n",
+    "    dragon_r_offset = [0, 0, 0]\n",
+    "    dragon_Q_offset = dcm_from_phi(pi / 2 * [1, 0, 0])\n",
+    "    dragon_offset = mc.compose(\n",
+    "        mc.Translation(dragon_r_offset),\n",
+    "        mc.LinearMap(dragon_Q_offset)\n",
+    "    )\n",
     "\n",
-    "# create first dragon \n",
-    "mc.setobject!(vis[:dragon][:base], dragon_obj, dragon_material) # NOTE :base\n",
-    "mc.settransform!(vis[:dragon][:base], dragon_offset)            # NOTE :base\n",
-    "end "
+    "    # create first dragon \n",
+    "    mc.setobject!(vis[:dragon][:base], dragon_obj, dragon_material) # NOTE :base\n",
+    "    mc.settransform!(vis[:dragon][:base], dragon_offset)            # NOTE :base\n",
+    "end"
    ]
   },
   {
@@ -200,11 +173,11 @@
     "    # THEN WHEN I DO ANIMATION, I JUST USE [:<OBJECT>]\n",
     "\n",
     "\n",
-    "    initialise_ball(mc,vis)\n",
+    "    initialise_ball(mc, vis)\n",
     "    rope_length = 5.0\n",
     "    N = 12\n",
     "\n",
-    "    initialise_quads(N,rope_length,mc,vis)\n",
+    "    initialise_quads(N, rope_length, mc, vis)\n",
     "    mc.render(vis)\n",
     "end"
    ]
