fleshed out dynamics

--- a/problem.ipynb
+++ b/problem.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -310,9 +303,11 @@
     "    idx, N, dt = params.idx, params.N, params.dt\n",
     "    NUM_QUAD = params.NUM_QUAD\n",
     "    #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
+    "    c = zeros(eltype(Z))\n",
     "    for i=1:N: #Each timestep\n",
     "        xi = Z[idx.x[i]]\n",
     "        xi_quads = [xi[(quad-1)*13 + 1:13*quad] for quad=1:NUM_QUAD]\n",
+    "        for i=1:\n",
     "        \n",
     "\n",
     "    end\n",
