--- a/problem.ipynb
+++ b/problem.ipynb
@@ -299,19 +299,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function quad_obstacle_proximity_constraints(params::NamedTuple, Z::Vector, obstacle_positions::Vector{Vector}):: Vector\n",
+    "function quad_proximity_constraint(params::NamedTuple, Z::Vector):: Vector\n",
     "    idx, N, dt = params.idx, params.N, params.dt\n",
     "    NUM_QUAD = params.NUM_QUAD\n",
+    "    dquad = params.dquad\n",
     "    #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
     "    c = zeros(eltype(Z))\n",
     "    for i=1:N: #Each timestep\n",
     "        xi = Z[idx.x[i]]\n",
     "        xi_quads = [xi[(quad-1)*13 + 1:13*quad] for quad=1:NUM_QUAD]\n",
-    "        for i=1:\n",
-    "        \n",
-    "\n",
+    "        for j=1:NUM_QUAD:\n",
+    "            for k=j+1:NUM_QUAD:\n",
+    "                constraint_val = 2*dquad - norm(xi_quads[j][1:2] - xi_quads[k][1:2])^2\n",
+    "                push!(c, constraint_val)\n",
+    "            end\n",
+    "        end\n",
     "    end\n",
+    "    return c\n",
     "end\n",
+    "\n",
+    "function quad_obstacle_proximity_constraint(params::NamedTuple, Z::Vector):: Vector\n",
+    "    idx, N, dt = params.idx, params.N, params.dt\n",
+    "    NUM_QUAD = params.NUM_QUAD\n",
+    "    obstacle_positions = params.obstacles\n",
+    "    dquad,dobs = params.dquad, params.dobs\n",
+    "    #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
+    "    c = zeros(eltype(Z))\n",
+    "    for i=1:N: #Each timestep\n",
+    "        xi = Z[idx.x[i]]\n",
+    "        xi_quads = [xi[(quad-1)*13 + 1:13*quad] for quad=1:NUM_QUAD]\n",
+    "        for j=1:length(obstacle_positions): #each obstacle\n",
+    "            for k=1:NUM_QUAD:\n",
+    "                constraint_val = dquad + dobs - norm(xi_quads[k][1:2] - obstacle_positions[j])^2\n",
+    "                push!(c, constraint_val)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return c\n",
+    "end\n",
+    "\n",
+    "# function quad_load_proximity_constraint(params::NamedTuple, Z::Vector):: Vector\n",
+    "#     idx, N, dt = params.idx, params.N, params.dt\n",
+    "#     NUM_QUAD = params.NUM_QUAD\n",
+    "#     obstacle_positions = params.obstacles\n",
+    "#     dload,dobs = params.dload, params.dobs\n",
+    "#     #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
+    "#     c = zeros(eltype(Z))\n",
+    "#     for i=1:N: #Each timestep\n",
+    "#         xi = Z[idx.x[i]]\n",
+    "#         xi_quads = [xi[(quad-1)*13 + 1:13*quad] for quad=1:NUM_QUAD]\n",
+    "#         for j=1:length(obstacle_positions): #each obstacle\n",
+    "#             for k=1:NUM_QUAD:\n",
+    "#                 constraint_val = dquad + dobs - norm(xi_quads[k][1:2] - obstacle_positions[j])^2\n",
+    "#                 push!(c, constraint_val)\n",
+    "#             end\n",
+    "#         end\n",
+    "#     end\n",
+    "#     return c\n",
+    "# end\n",
     "\n",
     "function inequality_constraints(params::NamedTuple, Z)\n",
     "end"
