no weird brackets

--- a/problem.ipynb
+++ b/problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -163,24 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ErrorException",
-     "evalue": "syntax: expected \"]\" or separator in arguments to \"[ ]\"; got \"-(ui_load[i]))\"",
-     "output_type": "error",
-     "traceback": [
-      "syntax: expected \"]\" or separator in arguments to \"[ ]\"; got \"-(ui_load[i]))\"\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Desktop/16745/recitations-2024/16745proj/problem.ipynb:76"
-     ]
+     "data": {
+      "text/plain": [
+       "equality_constraints (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "\n",
     "# q_lift, r_lift, qf_lift = quad_costs(n_lift, m_lift, scenario)\n",
     "\n",
     "# cat([q_lift for _ in 1:n]...; dims=(1,2))\n",
@@ -225,21 +221,19 @@
     "    idx, N, dt = params.idx, params.N, params.dt\n",
     "    model = params.model\n",
     "\n",
-    "    # create c in a ForwardDiff friendly way (check HW0)\n",
-    "    c = Vector{eltype(Z)}()\n",
+    "    # create c -1in a ForwardDiff friendly way (check HW0)\n",
+    "    # c = Vector{eltype    c = zeros(eltype(Z), 1)\n",
     "\n",
-    "    for i = 1:N-1\n",
-    "    #     x=Z[idx.x[i]]\n",
-    "c = zeros(eltype(Z), 1)        \n",
-    "u=Z[idx.u[i]]\n",
+    "\n",
+    "    for i = 1:N\n",
+    "        x = Z[idx.x[i]]\n",
+    "        u = Z[idx.u[i]]\n",
     "        for k = 1:NUM_QUAD\n",
-    "              quat=x[13*(k-1)+4:13*(k-1)+8]\n",
-    "              s=u[6*NUM_QUAD]\n",
-    "            push!(c,norm(s*quat,2)-1) \n",
-    "        end \n",
-    "  \n",
-    "      end\n",
-    "      \n",
+    "            quat = x[13*(k-1)+4:13*(k-1)+8]\n",
+    "            s = u[6*NUM_QUAD]\n",
+    "            push!(c, norm(s * quat, 2) - 1)\n",
+    "        end\n",
+    "    end\n",
     "    return c\n",
     "end\n",
     "\n",
@@ -247,15 +241,15 @@
     "    idx, N = params.idx, params.N\n",
     "    m_lift = params.m_lift\n",
     "    NUM_QUAD = params.NUM_QUAD\n",
-    "    c = Vector{eltype(Z)}()\n",
+    "    # c = Vector{eltype(Z)}()\n",
+    "    c = zeros(eltype(Z), 1)\n",
     "    for i = 1:N-1\n",
     "        ui = Z[idx.u[i]]\n",
-    "    #     s_inds = m_lift:m_l\n",
-    "    c = zeros(eltype(Z), 1)ift:m_lift*NUM_QUAD \n",
-    "        ui_load = ui[(1:NUM_QUAD) .+ m_lift*NUM_QUAD]\n",
+    "        s_inds = m_lift:m_lift:m_lift*NUM_QUAD\n",
+    "        ui_load = ui[(1:NUM_QUAD).+m_lift*NUM_QUAD]\n",
     "        for i = 1:NUM_QUAD\n",
     "            # println(ui[s_inds[i]])\n",
-    "            push!(c, ui[s_nds[i] -ui_load[i])\n",
+    "            push!(c, ui[s_inds[i]] - ui_load[i])\n",
     "        end\n",
     "    end\n",
     "    return c\n",
@@ -263,33 +257,33 @@
     "\n",
     "function rope_length_constraint(params::NamedTuple, Z::Vector)::Vector\n",
     "    idx, N = params.idx, params.N\n",
-    "    c = Vector{eltype(Z)}()\n",
-    "    for i=1:N-1\n",
+    "    # c = Vector{eltype(Z)}()\n",
+    "    c = zeros(eltype(Z), 1)\n",
+    "    for i = 1:N-1\n",
     "        xi = Z[idx.x[i]]\n",
-    "    #     r_load = xi[(1:3) .\n",
-    "    c = zeros(eltype(Z), 1)+ n_lift*NUM_QUAD]\n",
-    "        x i _quads = [xi[(quad-1)*n_lift+1:n_lift*quad] for quad = 1:NUM_QUAD]\n",
-    "        for j=1:NUM_QUAD\n",
-    "            push!(c, normxiquads[j][1:3] - r_load)^2)\n",
+    "        r_load = xi[(1:3).+n_lift*NUM_QUAD]\n",
+    "        xi_quads = [xi[(quad-1)*n_lift+1:n_lift*quad] for quad = 1:NUM_QUAD]\n",
+    "        for j = 1:NUM_QUAD\n",
+    "            push!(c, norm(xi_quads[j][1:3] - r_load)^2)\n",
     "        end\n",
     "    end\n",
-    "      return c\n",
+    "    return c\n",
     "end\n",
     "\n",
     "function equality_constraints(params::NamedTuple, Z::Vector)::Vector\n",
-    "    N, idx, xic, xg = params.N, params.idx, params.xic, params.xg \n",
-    "    return [Z[idx.x[1]]-xic;\n",
-    "            Z[idx.x[N]]-xg;\n",
-    "            dynamics_constraints(params,Z);\n",
-    "            equal_tensi o n_cable_constraint(params,Z);\n",
-    "        quaternion_ c onstraints(params,Z);\n",
-    "        rope_length_constraint(param s,Z)]\n",
-    "  "
+    "    N, idx, xic, xg = params.N, params.idx, params.xic, params.xg\n",
+    "    return [Z[idx.x[1]] - xic;\n",
+    "        Z[idx.x[N]] - xg;\n",
+    "        dynamics_constraints(params, Z);\n",
+    "        equal_tension_cable_constraint(params, Z);\n",
+    "        quaternion_constraints(params, Z);\n",
+    "        rope_length_constraint(params, Z)]\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
